---------------------------------------------

- v1.0.1000                                 -
---------------------------------------------
- 2020-05-29                                -
---------------------------------------------
.: WSM: BugFix: Checking opening info (WSM-36)
.: WSM: BugFix: Loading spinner in pending button (WSM-36)
.: WSM: BugFix: Topic displayed incorrectly (WSM-71)

---------------------------------------------
- 2020-05-28                                -
---------------------------------------------
.: WSM: Task: Update managing items flow (WSM-54)
.: WSM: BugFix: Navigate to correct category when category name is edited (WSM-5)
.: WSM: BugFix: Fixed operation after adding new contributor without refresh (WSM-25)

---------------------------------------------
- 2020-05-27                                -
---------------------------------------------
.: WSM: Task: Update Shop Settings (WSM-23)
.: WSM: BugFix: Fix Profile Ordering Issue (WSM-29)

---------------------------------------------
- 2020-05-26                                -
---------------------------------------------
.: WSM: Task: Update Shop Validation (WSM-24)
.: WSM: Task: Profile Uploader (WSM-38)

---------------------------------------------
- 2020-05-25                                -
---------------------------------------------
.: WSM: Task: Remove tel required from registration (WSM-2)
.: WSM: BugFix: Open url in correct domain (WSM-74)
.: WSM: Task: Update create shop flow (WSM-24)

---------------------------------------------
- 2020-05-23                                -
---------------------------------------------
.: WSM: Task: Update link folder with Wonder Scale Website (WSM-54)
.: WSM: Task: Disabled to upload customize image in QR code (WSM-20)

---------------------------------------------
- 2020-05-20                                -
---------------------------------------------
.: WSM: Task: Profile Image Upload (WSM-38)
